fix(FF-01): pageServices title truncate

--- a/packages/page-layout/src/components/Headline/styles.module.scss
+++ b/packages/page-layout/src/components/Headline/styles.module.scss
@@ -21,6 +21,10 @@
   color: styles-theme-variables.$sys-neutral-text-main;
 }
 
+.title {
+  min-width: 0;
+}
+
 .prefixButtonWrapper {
   display: flex;
   align-items: center;
